add heading tag

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       </div>
     </section>
 
-    <section role="summary">
+    <section>
       <div class="summary-section">
-        <h2>
+        <h1>
           Order Summary
-        </h2>
+        </h1>
         <p>
           You can now listen to millions of songs, audiobooks, and podcasts on
           any device anywhere you like!
@@ -38,7 +38,7 @@
       </div>
     </section>
 
-    <section role="pricing">
+    <section>
       <div class="plan">
         <div class="plan-icon">
           <img src="images/icon-music.svg" alt="icon-music">
@@ -53,7 +53,7 @@
       </div>
     </section>
 
-    <section role="button">
+    <section>
       <button class="btn btn-proceed">Proceed to Payment</button>
       <button class="btn btn-cancel">Cancel Order</button>
     </section>
